--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -1,4 +1,5 @@
 <div>
   <h1 class="text-4xl font-bold bg-red-500">Public#index</h1>
   <p>Find me in app/views/public/index.html.erb</p>
+  works!
 </div>
